2005-05-26  Adam Fedor  <fedor@gnu.org>

	* Update FSF Address.

2005-05-20  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Headers/xlib/XGGState.h, Source/xlib/XGGState.m: Changed
	HAVE_LIBXFT #ifdefs to HAVE_XFT.
	* configure.ac, config.h.in: Changed comments for HAVE_XFT to
	clarify that it is different from HAVE_LIBXFT (latter is just the
	runtime lib, while former implies a functional installation).

2005-05-14  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/xlib/XGGState.m: Added missing #ifdefs to last patch so
	compilation on non-libxft system is unaffected.

2005-05-12  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Headers/xlib/XGGState.h (xft_draw, xft_alpha_draw, xft_color,
	-xftDrawForDrawable, -xftColor): New ivars and methods for caching
	Xft (freetype) draw state.
	* Source/xlib/XGGState.m (-xftDrawForDrawable:, -xftColor): Cache
	Xft draw state.
	* Source/xlib/GSXftFontInfo.m: Use cached Xft draw state for rendering.

2005-04-20  Adam Fedor  <fedor@gnu.org>

	* Fonts/GNUmakefile.postamble: Make sure to install in 
	$(GNUSTEP_INSTALLATION_DIR).
	* GNUmakefile: Add check to not install fonts if fonts=no.
	Fixes bug #12749

2005-04-19  Adam Fedor  <fedor@gnu.org>

	* Source/art/path.m ([ARTGState -_stroke:]): Change floorf->floor.
	Fixes bug #12731.

2005-04-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGGState.m
	(-_compositeGState:sourcefromRect:fromRecttoPoint:toPointop:opfraction:]): 
	New way to compute drect. This fixes bug #12459.

2005-04-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m  (-iconSize): Use XFree to free
	xiconsize. Fixes bug #12578.

2005-04-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/winlib/WIN32GState.m: tunr on alpha blending and swap colors
	to correct format.

2005-04-01  Adam Fedor  <fedor@gnu.org>

	* Source/win32/WIN32Server.m: Re-add 2005-02-23 change.

	* Source/xlib/GSXftFontInfo.m (-setupAttributes): Make log message
	more verbose.

2005-04-01 Richard Frith-Macdonald <rfm@gnu.org>
