@@ -1,3 +1,10 @@
+2005-06-07  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/winlib/Win32GState.m (GSCreateBitmap): Allow
+	NSCalibratedRGBColorSpace as well.
+	(-_compositeGState:fromRect:toPoint:op:fraction:) Removed the
+	leading underscore of the method name.
+
 2005-05-26  Adam Fedor  <fedor@gnu.org>
 
 	* Update FSF Address.
